--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import Mail from "@icons/Mail.astro";
 ---
 
 <footer class="bg-primary mt-[90px] max-md:mt-[20%] max-sm:mt-[min(31%,135px)] max-min:mt-[clamp(0px,60%,190px)]">
-  <div class="mx-auto mt-36 mb-20 max-w-screen-xl w-full px-5 relative">
+  <div class="mx-auto mt-36 mb-20 max-w-screen-8xl w-full px-5 relative">
     <div
       class="absolute left-1/2 transform -translate-x-1/2 -translate-y-[130%] max-md:-translate-y-[110%] bg-black py-9 px-16 max-md:py-6 max-md:px-8 flex max-md:flex-col items-center justify-between gap-8 rounded-3xl w-[calc(100%-2rem)]"
     >
