--- a/src/components/Shop.astro
+++ b/src/components/Shop.astro
@@ -25,7 +25,7 @@ export const prerender = false;
 
 <Layout
   title="Shop"
-  className="nav:grid nav:grid-cols-[0.5fr_1fr_1fr] nav:grid-rows-[auto_1fr_1fr_1fr_auto] gap-x-5 gap-y-6 px-24 max-2lg:px-4 max-nav:px-4 pb-20"
+  className="max-w-screen-8xl mx-auto w-full nav:grid nav:grid-cols-[0.5fr_1fr_1fr] nav:grid-rows-[auto_1fr_1fr_1fr_auto] gap-x-5 gap-y-6 px-4 pb-20 pt-6 border-primary border-t"
 >
   <!-- BREADCRUMB -->
   <Breadcrumb />
