--- a/src/pages/shop/[category]/[productId].astro
+++ b/src/pages/shop/[category]/[productId].astro
@@ -178,7 +178,7 @@ const previousPrice = product.discount
       <div class="inline-flex gap-5 w-full">
         <InputQuantity
           max={product.inventory[0]?.stock || 1}
-          className="max-w-20 max-nav:w-12"
+          itemClass="max-w-20 max-nav:w-12"
           id="quantity"
         />
         <button
