rename icon component

--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -1,5 +1,5 @@
 ---
-import ArrowDown from "@icons/ArrowDown.astro";
+import ChevronDown from "@icons/ArrowDown.astro";
 import SizeSelector from "@components/SizeSelector.astro";
 import ColorSelector from "@components/ColorSelector.astro";
 import DualRangeSlider from "@components/react-components/DualRangeSlider";
@@ -33,28 +33,28 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
       aria-label="Go to category"
       class="inline-flex w-full justify-between items-center hover:underline"
     >
-      T-Shirts <ArrowDown className="-rotate-90 text-black opacity-55" />
+      T-Shirts <ChevronDown className="-rotate-90 text-black opacity-55" />
     </a>
     <a
       href="/"
       aria-label="Go to category"
       class="inline-flex w-full justify-between items-center hover:underline"
     >
-      Shorts <ArrowDown className="-rotate-90 text-black opacity-55" />
+      Shorts <ChevronDown className="-rotate-90 text-black opacity-55" />
     </a>
     <a
       href="/"
       aria-label="Go to category"
       class="inline-flex w-full justify-between items-center hover:underline"
     >
-      Shirts <ArrowDown className="-rotate-90 text-black opacity-55" />
+      Shirts <ChevronDown className="-rotate-90 text-black opacity-55" />
     </a>
     <a
       href="/"
       aria-label="Go to category"
       class="inline-flex w-full justify-between items-center hover:underline"
     >
-      Jeans <ArrowDown className="-rotate-90 text-black opacity-55" />
+      Jeans <ChevronDown className="-rotate-90 text-black opacity-55" />
     </a>
   </div>
 
@@ -126,28 +126,28 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
-        Casual <ArrowDown className="-rotate-90 text-black opacity-55" />
+        Casual <ChevronDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
         href="/shop/formal"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
-        Formal <ArrowDown className="-rotate-90 text-black opacity-55" />
+        Formal <ChevronDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
         href="/shop/party"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
-        Party <ArrowDown className="-rotate-90 text-black opacity-55" />
+        Party <ChevronDown className="-rotate-90 text-black opacity-55" />
       </a>
       <a
         href="/shop/gym"
         aria-label="Go to category"
         class="inline-flex w-full justify-between items-center hover:underline"
       >
-        Gym <ArrowDown className="-rotate-90 text-black opacity-55" />
+        Gym <ChevronDown className="-rotate-90 text-black opacity-55" />
       </a>
     </div>
   </div>
