Implement barrel file to consolidate icon exports

--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -1,15 +1,11 @@
 ---
-import CalvinKleinLogo from "@icons/CalvinKleinLogo.astro";
-import GucciLogo from "@icons/GucciLogo.astro";
-import PradaLogo from "@icons/PradaLogo.astro";
-import VersageLogo from "@icons/VersageLogo.astro";
-import ZaraLogo from "@icons/ZaraLogo.astro";
+import Icon from "@icons"
 ---
 
 <section aria-label="brands-heading" class="py-11 px-4 bg-black w-full inline-flex flex-wrap gap-8 items-center justify-around">
-  <VersageLogo className="max-w-40 max-md:max-w-28" />
-  <ZaraLogo className="max-w-[5.7rem] max-md:max-w-16" />
-  <GucciLogo className="max-w-[9.7rem] max-md:max-w-[6.84rem]" />
-  <PradaLogo className="max-w-48 max-md:max-w-32" />
-  <CalvinKleinLogo className="max-w-52 max-md:max-w-[8.4rem]" />
+  <Icon.VersageLogo class="max-w-40 max-md:max-w-28" />
+  <Icon.ZaraLogo class="max-w-[5.7rem] max-md:max-w-16" />
+  <Icon.GucciLogo class="max-w-[9.7rem] max-md:max-w-[6.84rem]" />
+  <Icon.PradaLogo class="max-w-48 max-md:max-w-32" />
+  <Icon.CalvinKleinLogo class="max-w-52 max-md:max-w-[8.4rem]" />
 </section>
