--- a/src/icons/Visa.astro
+++ b/src/icons/Visa.astro
@@ -1,5 +1,5 @@
 ---
-const { className = "text-[#1434CB]" } = Astro.props as IconProps
+const { class: className = "text-[#1434CB]" } = Astro.props as IconProps
 ---
 
 
