--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,7 @@
 ---
-import ArrowDownIcon from "@assets/chevron-down.svg?raw";
-import CartIcon from "@icons/Cart.astro";
-import SearchIcon from "@icons/Search.astro";
-import UserIcon from "@icons/User.astro";
+import Icon from "@icons";
 import { Image } from "astro:assets";
+import ArrowDownIcon from "@assets/chevron-down.svg?raw";
 import MobileNav from "@components/react-components/MobileNav";
 ---
 
@@ -76,7 +74,7 @@ import MobileNav from "@components/react-components/MobileNav";
   <search
     class="grow inline-flex gap-x-3 bg-[#F0F0F0] rounded-full px-4 py-3 max-nav:hidden"
   >
-    <SearchIcon className="text-[#00000050]" />
+    <Icon.Search class="text-[#00000050]" />
     <input
       class="bg-transparent focus:outline-none w-full"
       placeholder="Search for products..."
@@ -93,13 +91,13 @@ import MobileNav from "@components/react-components/MobileNav";
       aria-label="Abrir el buscador"
       type="button"
     >
-      <SearchIcon />
+      <Icon.Search />
     </button>
     <a aria-label="Ir al carrito" href="/">
-      <CartIcon />
+      <Icon.Cart />
     </a>
     <a aria-label="Ir a la cuenta" href="/">
-      <UserIcon />
+      <Icon.User />
     </a>
   </nav>
 </header>
