--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import Starlight from "@icons/Starlight.astro";
+import Icon from "@icons";
 import { Image } from "astro:assets";
 ---
 
@@ -43,7 +43,7 @@ import { Image } from "astro:assets";
     </div>
   </div>
   <span class="relative flex flex-col">
-    <Starlight className="absolute left-4 top-1/2 z-10" aria-hidden="true" />
+    <Icon.Starlight class="absolute left-4 top-1/2 z-10" aria-hidden="true" />
     <Image
       alt="Decorative hero pattern displaying fashion elements"
       class="md:mx-auto mt-auto w-auto"
@@ -53,6 +53,6 @@ import { Image } from "astro:assets";
       width={100}
       height={200}
     />
-    <Starlight className="absolute md:top-16 top-0 right-5 !w-[104px] z-10" />
+    <Icon.Starlight class="absolute md:top-16 top-0 right-5 !w-[104px] z-10" />
   </span>
 </section>
