--- a/src/icons/GitHub.astro
+++ b/src/icons/GitHub.astro
@@ -1,5 +1,5 @@
 ---
-const { className } = Astro.props as IconProps
+const { class: className } = Astro.props as IconProps
 ---
 
 <svg width="14" height="13" viewBox="0 0 14 13" class={className} xmlns="http://www.w3.org/2000/svg">
