--- a/src/icons/Instagram.astro
+++ b/src/icons/Instagram.astro
@@ -1,5 +1,5 @@
 ---
-const { className } = Astro.props as IconProps
+const { class: className } = Astro.props as IconProps
 ---
 
 <svg width="14" height="14" viewBox="0 0 14 14" class={className} xmlns="http://www.w3.org/2000/svg">
