--- a/src/icons/Mail.astro
+++ b/src/icons/Mail.astro
@@ -1,5 +1,5 @@
 ---
-const { className } = Astro.props as IconProps
+const { class: className } = Astro.props as IconProps
 ---
 
 <svg width="22" height="16" class={className} xmlns="http://www.w3.org/2000/svg"><path d="M20 .125H2A1.125 1.125 0 0 0 .875 1.25V14a1.875 1.875 0 0 0 1.875 1.875h16.5A1.875 1.875 0 0 0 21.125 14V1.25A1.125 1.125 0 0 0 20 .125Zm-9 7.849L4.892 2.375h12.216L11 7.974ZM7.7 8l-4.575 4.193V3.807L7.699 8Zm1.664 1.526.876.804a1.125 1.125 0 0 0 1.52 0l.876-.804 4.472 4.099H4.892l4.472-4.099ZM14.301 8l4.574-4.192v8.385L14.301 8Z" fill="currentColor" fill-opacity=".4"/></svg>
