--- a/src/components/InputQuantity.astro
+++ b/src/components/InputQuantity.astro
@@ -26,6 +26,7 @@ const { class: className, itemClass, max, min, id } = Astro.props;
       max={max || "99"}
       min={min || "1"}
       value={min || "1"}
+      aria-label="Quantity"
     />
     <button
       type="button"
