--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -93,7 +93,7 @@ import MobileNav from "@components/react-components/MobileNav";
     >
       <Icon.Search />
     </button>
-    <a aria-label="Ir al carrito" href="/">
+    <a aria-label="Ir al carrito" href="/cart">
       <Icon.Cart />
     </a>
     <a aria-label="Ir a la cuenta" href="/">
