--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,9 +63,9 @@ import MobileNav from "@components/react-components/MobileNav";
       </li>
 
       <!-- Otros Enlaces de Navegación -->
-      <li><a class="truncate" href="/">On Sale</a></li>
-      <li><a class="truncate" href="/">New Arrivals</a></li>
-      <li><a class="truncate" href="/">Brands</a></li>
+      <li><a class="truncate" href="/shop/On%20Sale">On Sale</a></li>
+      <li><a class="truncate" href="/shop/New%20Arrivals">New Arrivals</a></li>
+      <li><a class="truncate" href="/shop/Brands">Brands</a></li>
     </ul>
   </nav>
   <!-- NAVEGACIÓN PRINCIPAL END -->
