--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,13 +20,13 @@ import { Image } from "astro:assets";
       Browse through our diverse range of meticulously crafted garments,
       designed to bring out your individuality and cater to your sense of style.
     </p>
-    <button
-      class="btn bg-black text-white rounded-full py-4 px-14 md:w-fit"
+    <a
+      class="bg-black font-medium text-white rounded-full py-4 px-14 md:w-fit"
       aria-label="Shop Now"
-      type="button"
+      href="/shop"
     >
       Shop Now
-    </button>
+    </a>
     <div class="inline-flex flex-wrap justify-around gap-8 mt-3">
       <span>
         <h5 class="text-black text-4xl font-bold">200+</h5>
