--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -108,7 +108,7 @@ const topSellings = [
       <a
         class="block max-md:w-full py-3 px-14 border border-opacity-10 rounded-full mx-auto text-center"
         aria-label="Show all new arrivals"
-        href="/"
+        href="/shop/New%20Arrivals"
       >
         View All
       </a>
@@ -150,7 +150,7 @@ const topSellings = [
       <a
         class="block max-md:w-full py-3 px-14 border border-opacity-10 rounded-full mx-auto text-center"
         aria-label="Show all top selling products"
-        href="/"
+        href="/shop/Top%20Selling"
       >
         View All
       </a>
@@ -173,7 +173,7 @@ const topSellings = [
 
     <div class="mt-16 flex flex-col gap-5">
       <div class="flex max-nav:flex-col justify-center gap-5 w-full">
-        <a aria-label="View casual style products" class="relative rounded-3xl group overflow-hidden" href="/">
+        <a aria-label="View casual style products" class="relative rounded-3xl group overflow-hidden" href="/shop/Casual">
           <figure>
             <Image
               class="w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
@@ -191,7 +191,7 @@ const topSellings = [
         <a
           aria-label="View formal style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end group overflow-hidden"
-          href="/"
+          href="/shop/Formal"
         >
           <figure>
             <Image
@@ -212,7 +212,7 @@ const topSellings = [
         <a
           aria-label="View party style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end overflow-hidden group"
-          href="/"
+          href="/shop/Party"
         >
           <figure>
             <Image
@@ -228,7 +228,7 @@ const topSellings = [
             </figcaption>
           </figure>
         </a>
-        <a aria-label="View gym style products" class="relative rounded-3xl overflow-hidden group" href="/">
+        <a aria-label="View gym style products" class="relative rounded-3xl overflow-hidden group" href="/shop/Gym">
           <figure>
             <Image
               class="nav:w-[407px] w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
