--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -21,11 +21,14 @@ import { Image } from "astro:assets";
       designed to bring out your individuality and cater to your sense of style.
     </p>
     <a
-      class="bg-black font-medium text-white rounded-full py-4 px-14 md:w-fit"
-      aria-label="Shop Now"
       href="/shop"
+      aria-label="Shop Now"
+      class="relative overflow-hidden group bg-black hover:bg-gradient-to-r hover:from-slate-950 hover:to-slate-900 font-medium text-center text-white rounded-full py-4 px-14 md:w-fit transition-all ease-out duration-300"
     >
-      Shop Now
+      <span
+        class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-5 rotate-12 group-hover:-translate-x-40 ease"
+      ></span>
+      <span class="relative">Shop Now</span>
     </a>
     <div class="inline-flex flex-wrap justify-around gap-8 mt-3">
       <span>
