--- a/src/components/Products/CarruselProduct.astro
+++ b/src/components/Products/CarruselProduct.astro
@@ -10,7 +10,7 @@ const thumbs = [
 ];
 ---
 
-<div class="flex max-main:flex-col-reverse gap-x-3.5 gap-y-3.5 nav:max-h-[600px] overflow-hidden">
+<div class="flex max-main:flex-col-reverse gap-x-3.5 gap-y-3.5 nav:max-w-screen-md nav:max-h-[600px] overflow-hidden">
   <!-- THUMBNAILS -->
   <div
     id="thumbnails__cards"
