--- a/src/pages/shop/[category]/[productId].astro
+++ b/src/pages/shop/[category]/[productId].astro
@@ -41,7 +41,7 @@ const previousPrice = product.discount
 <Layout
   id="product-page"
   title="Product"
-  className="w-full max-w-screen-2xl px-4 mx-auto"
+  className="w-full max-w-screen-8xl px-4 pt-6 mx-auto border-t border-primary"
 >
   <!-- BREADCRUMB -->
   <Breadcrumb>
