--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,7 +30,7 @@ import { Image } from "astro:assets";
       ></span>
       <span class="relative">Shop Now</span>
     </a>
-    <div class="inline-flex flex-wrap justify-around gap-8 mt-3">
+    <div class="inline-flex flex-wrap justify-around gap-8 mt-3 cursor-default">
       <span>
         <h5 class="text-black text-4xl font-bold">200+</h5>
         <p class="text-primary">International Brands</p>
