--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -96,7 +96,7 @@ import MobileNav from "@components/react-components/MobileNav";
     <a aria-label="Ir al carrito" href="/cart">
       <Icon.Cart />
     </a>
-    <a aria-label="Ir a la cuenta" href="/auth/signup">
+    <a aria-label="Ir a la cuenta" href="/auth/login">
       <Icon.User />
     </a>
   </nav>
