--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -13,7 +13,7 @@ if(Astro.locals.session) {
     <form class="flex flex-col gap-y-4 mt-5" action="/api/login" method="POST">
       <label class="inline-flex items-center gap-x-3" for="email">
         <span>Email:</span>
-        <input class="input input-bordered grow" type="email" id="email" name="email" value="test@test.com" required />
+        <input class="input input-bordered grow" type="email" id="email" name="email" value="user@user.com" required />
       </label>
       <label class="inline-flex items-center gap-x-3" for="password"
         ><span>Password:</span>
