--- a/src/components/Products/CardProduct.astro
+++ b/src/components/Products/CardProduct.astro
@@ -47,10 +47,10 @@ const previousPrice = discount
       </a>
     </h3>
 
-    <div class="inline-flex justify-start gap-1">
+    <div class="inline-flex justify-start items-center gap-1">
       {/* Estrellas de Calificación */}
       <span
-        class={`text-xl -my-[6px] inline-flex rating-star rating-star-[${rating}]`}
+        class={`text-xl/4 -my-[6px] inline-flex rating-star rating-star-[${rating}]`}
         aria-label={`Calificación de ${rating} de 5`}
         role="img"></span>
       <p aria-label="rating" class="text-sm">
