--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -10,7 +10,7 @@ if(Astro.locals.session) {
 <Layout title="Login">
   <div class="container mx-auto mb-5 max-w-96 border border-gray-300 p-5 rounded-lg">
     <h1 class="text-2xl text-center font-bold">Login</h1>
-    <form class="flex flex-col gap-y-4 mt-5" action="/api/login" method="POST">
+    <form class="flex flex-col gap-y-4 mt-5" action="/api/auth/login" method="POST">
       <label class="inline-flex items-center gap-x-3" for="email">
         <span>Email:</span>
         <input class="input input-bordered grow" type="email" id="email" name="email" value="user@user.com" required />
