--- a/src/components/InputQuantity.astro
+++ b/src/components/InputQuantity.astro
@@ -1,5 +1,5 @@
 ---
-const { class: className, itemClass, max, min, id } = Astro.props;
+const { class: className, itemClass, max, min, id, defaultValue } = Astro.props;
 ---
 
 <div
@@ -25,7 +25,7 @@ const { class: className, itemClass, max, min, id } = Astro.props;
       ]}
       max={max || "99"}
       min={min || "1"}
-      value={min || "1"}
+      value={defaultValue || "1"}
       aria-label="Quantity"
     />
     <button
